update filter tag style, filter table style, fix for body shift on modal open, update css

--- a/nsti/static/css/bootstrap.css
+++ b/nsti/static/css/bootstrap.css
@@ -6803,12 +6803,3 @@ td.visible-print {
     display: none !important;
   }
 }
-
-/*Modal shifting fix*/
-.scrollbar-measure {
-  width: 1px;
-  height: 1px;
-  overflow: scroll;
-  position: absolute;
-  top: -9999px;
-}
